Bug 1679464 - Extend nsAbQueryStringToExpression::ParseExpression to handle '?' at the start of queries. r=darktrojan

Differential Revision: https://phabricator.services.mozilla.com/D98029

--HG--
extra : moz-landing-system : lando